添加 nfc 功能
